--- a/views/private-editor.ejs
+++ b/views/private-editor.ejs
@@ -171,7 +171,7 @@
         %>
 		<script>
 			"use strict";
-            var connexionID = 0;
+            var version = 0;
 
             var timeoutUpdateUsername = null;
             var serverDB;
@@ -198,10 +198,10 @@
                     .done(function (results) ***REMOVED***
                         var doc;
                         if(results.length === 0) ***REMOVED***
-                            connexionID = 1;
+                            version = 1;
                             doc = ***REMOVED***
                                 docID: '<%= docID %>',
-                                connexionID: 1
+                                version: 1
                         ***REMOVED***;
                             serverDB.docs.add(doc)
                             .done(function (item) ***REMOVED***
@@ -209,10 +209,10 @@
                         ***REMOVED***);
                     ***REMOVED***
                         else ***REMOVED***
-                            connexionID = results[0].connexionID + 1;
+                            version = results[0].version + 1;
                             serverDB.docs.query()
                             .filter('docID', '<%= docID %>')
-                            .modify(***REMOVED*** connexionID: connexionID ***REMOVED***)
+                            .modify(***REMOVED*** version: version ***REMOVED***)
                             .execute()
                             .done(function (results) ***REMOVED***
                                 initPage();
@@ -225,8 +225,8 @@
                             .execute()
                             .done(function (results) ***REMOVED***
                                 if(results.length === 1) ***REMOVED***
-                                    if(results[0].connexionID !== connexionID) ***REMOVED***
-                                        console.log(results[0].connexionID + ' !== ' + connexionID);
+                                    if(results[0].version !== version) ***REMOVED***
+                                        console.log(results[0].version + ' !== ' + version);
                                         $('#modalCloseTab').modal('show');
                                         coordinator.dispose();
                                         network.dispose();
