Made the collaborators list collapsable

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -30,10 +30,16 @@
         </div>
         <hr>
         <div class="row">
-            <div class="col-md-10" style="padding-right: 0px;">
+            <button id="btnPanelController" class="btn btn-default pull-right" style="margin-right: 30px;" onclick="hideCollaboratorsList();">
+                <span id="panelControllerIcon" class="glyphicon glyphicon-arrow-right"></span>
+                <span id="panelControllerLabel">Hide list</span>
+            </button>
+        </div>
+        <div class="row">
+            <div class="col-md-10" id="divMain" style="padding-right: 0px;">
                 <% include editor %>
             </div>
-            <div class="col-md-2" style="padding-top: 15px; padding-left:0px; padding-right: 30px;">
+            <div class="col-md-2" id="divInfosSup" style="padding-top: 15px; padding-left:0px; padding-right: 30px;">
                 <div class="panel-group">
                     <div class="panel panel-default">
                         <div class="panel-heading" style="border: 1px solid #ddd">
@@ -46,23 +52,24 @@
                             <form class="form" role="form">
                                 <div class="row">
                                     <div class="col-md-12">
-                                        <input type="text" class="form-control" id="inputUsername" placeholder="Enter username">
+                                        <input type="text" maxlength="20" class="form-control" id="inputUsername" placeholder="Enter username">
+                                        <span class="help-block">Only alphanumerics characters, max length: 20.</span>
                                     </div>
                                 </div>
                                 <br>
                                 <center>
-                                    <button type="button" id="btnUsername" class="btn btn-primary" onclick="updateUsername()" data-toggle="tooltip" data-placement="bottom" title="Username updated!">Submit</button>
+                                    <button type="button" id="btnUsername" class="btn btn-primary" onclick="updateUsername()" data-toggle="tooltip" data-placement="bottom" title="Username updated!">Change</button>
                                 </center>
                             </form>
                         </div>
                     </div>
                 </div>
-
-                <div class="panel-group" id="">
+                
+                <div class="panel-group">
                     <div class="panel panel-default" style="border: 0px; box-shadow: 0 0px 0px;">
                         <div class="panel-heading" style="border: 1px solid #ddd">
                             <h4 class="panel-title">
-                                <span class="glyphicon glyphicon-user" style="margin-right: 10px;"></span>
+                                <span class="glyphicon glyphicon-th-list" style="margin-right: 10px;"></span>
                                 <strong>Collaborators</strong>
                             </h4>
                         </div>
@@ -292,20 +299,62 @@
         ***REMOVED***
 
             function updateUsername() ***REMOVED***
-                timeoutUpdateUsername = setTimeout(function () ***REMOVED***
-                    // Encode the username to avoid some Javascript injections
-                    var username = $('<div/>').text($('#inputUsername').val()).html();
-                    infosUsersModule.updateLocalUsername(username);
+                // Encode the username to avoid some Javascript injections
+                var username = $('<div/>').text($('#inputUsername').val()).html().trim();
+                var regexp = /^[a-zA-Z0-9,]+(\s***REMOVED***0,1***REMOVED***[a-zA-Z0-9,])*$/
+                console.log('test regexp: ', username.match(regexp));
+                $('#btnUsername').tooltip('destroy');
+                if(username.length <= 20 && username.match(regexp) !== null) ***REMOVED***
+                    $('#btnUsername').attr('title', 'Username updated!');
+                    if(timeoutUpdateUsername === null) ***REMOVED***
+                        timeoutUpdateUsername = setTimeout(function () ***REMOVED***        
+                            infosUsersModule.updateLocalUsername(username);
+                            clearTimeout(timeoutUpdateUsername);
+                            timeoutUpdateUsername = null;
+                    ***REMOVED*** 1000);  
+                ***REMOVED***
+            ***REMOVED***
+                else if(username.match(regexp) === null) ***REMOVED***
+                    $('#btnUsername').attr('title', 'Please use only alphanumerics characters!');
+                    console.log('title: ', $('#btnUsername').attr('title'));
+            ***REMOVED***
+                else if(username.length > 20) ***REMOVED***
+                    $('#btnUsername').attr('title', 'Too long... Choose a shorter username!');
+            ***REMOVED***
+                console.log('On affiche!');
+                $('#btnUsername').tooltip(***REMOVED***
+                    trigger: 'manual'
+            ***REMOVED***);
+                $('#btnUsername').tooltip('show');
+                setTimeout(function () ***REMOVED***
                     $('#btnUsername').tooltip('hide');
-                    clearTimeout(timeoutUpdateUsername);
             ***REMOVED*** 1000);
         ***REMOVED***
 
             console.log('docID: <%= docID %>');
 
-            $('#btnUsername').tooltip(***REMOVED***
-                trigger: 'click',
-        ***REMOVED***);
+            function showCollaboratorsList() ***REMOVED***
+                $('#divMain').animate(***REMOVED*** width: '83,33%' ***REMOVED***);
+                $('#divInfosSup').animate(***REMOVED*** width: '16,67%' ***REMOVED***).show();
+                setTimeout(function () ***REMOVED*** 
+                    editor.editor.resize();
+                    $('#panelControllerLabel').html('Hide list');
+                    $('#panelControllerIcon').removeClass('glyphicon-arrow-left').addClass('glyphicon-arrow-right');
+                    $('#btnPanelController').attr('onclick', 'hideCollaboratorsList()');
+            ***REMOVED*** 0);
+
+        ***REMOVED***
+
+            function hideCollaboratorsList() ***REMOVED***
+                $('#divInfosSup').animate(***REMOVED*** width: '0%'***REMOVED***).hide();
+                $('#divMain').animate(***REMOVED*** width: '100%'***REMOVED***);
+                setTimeout(function () ***REMOVED*** 
+                    editor.editor.resize();
+                    $('#panelControllerLabel').html('Show list');
+                    $('#panelControllerIcon').removeClass('glyphicon-arrow-right').addClass('glyphicon-arrow-left');
+                    $('#btnPanelController').attr('onclick', 'showCollaboratorsList()');
+            ***REMOVED*** 400);
+        ***REMOVED***
         </script>
 	</body>
 </html>
